--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@import 'https://fonts.googleapis.com/css?family=Roboto';
+html, body {
+	background-color: white;
+}
+h2, a, p {
+	color: #fff;
+	font-family: Roboto;
+	text-decoration: none;
+}
+p>a {
+	color: #fd084a;
+}
+.blink {
+  animation: blink 0.5s infinite;
+}
+@keyframes blink{
+  to { opacity: .0; }
+}
+.flex {
+	display: flex;
+}
+.header-sub-title {
+  color: white;
+  font-weight:bold;
+  font-family: "Montserrat";
+  font-size: 40px;
+  padding: 0.1em;
+}
